--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,16 @@
-name: Serena J. Gu
+# Site Settings
 markdown: kramdown
+locale                   : "en-US"
+title                    : "SJG"
+title_separator          : "-"
+name                     : &name "Serena J. Gu"
+description              : &description "personal description"
+url                      : https://cytfloar.github.io
+#baseurl                  : "" # the subpath of your site, e.g. "/blog"
+repository               : "cytfloar/cytfloar.github.io"
+#teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+breadcrumbs              : false # true, false (default)
+words_per_minute         : 160
+future                   : true
+read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
+#talkmap_link             : false #change to true to add
