--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,5 @@
 Full_SJG:
-  name        : "Serena J. Gu"
+  name        : "Serena J. Gu, M.A."
   bio         : 
   avatar      : "/assets/images/logo.jpg"
   links:
