update google schoar icon

--- a/_config.yml
+++ b/_config.yml
@@ -126,8 +126,12 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/cytfloar"
     - label: ""
-      icon: "fas fa-regular fa-envelope"
-      url: "mailto:serenajgu@email.com"
+      icon: "ai ai-google-scholar"
+      # icon: "ai ai-google-scholar big-icon"
+      url: "https://scholar.google.com/citations?user=5N-Rte0AAAAJ&hl=en"
+    # - label: ""
+    #   icon: "fas fa-regular fa-envelope"
+    #   url: "mailto:serenajgu@email.com"
     # - label: ""
     #   icon: "fab fa-fw fa-mastodon"
     #   url: "https://mastodon.online/@cytfloar"
