--- a/_config.yml
+++ b/_config.yml
@@ -114,8 +114,8 @@ author:
     #   icon: "fas fa-fw fa-link"
     # url: "https://your-website.com"
     - label: ""
-      icon: "fab fa-twitter"
-      url: "https://twitter.com/serenajgu"
+      icon: "fa-brands fa-bluesky"
+      url: "https://bsky.app/profile/serenajgu.bsky.social"
     # - label: "Facebook"
     #   icon: "fab fa-fw fa-facebook-square"
     #   # url: "https://facebook.com/"
