--- a/_config.yml
+++ b/_config.yml
@@ -137,7 +137,7 @@ author:
     #   url: "https://mastodon.online/@cytfloar"
     - label: ""
       icon: "ai ai-cv big-icon"
-      url: "/assets/SG_CV_2024.pdf"
+      url: "/assets/SG_CV.pdf"
 
 # Site Footer
 # footer:
